--- a/sequencing_single_seller.qmd
+++ b/sequencing_single_seller.qmd
@@ -710,5 +710,5 @@ for seller_id, df in all_results.items():
 This project includes an interactive Streamlit application  
 where users can input a seller ID and compare FCFS, SPT, and EDD results.
 
-👉 [Launch App](https://scheduling-or.streamlit.app)
+[Seller Order Sequencing Dashboard](https://scheduling-or.streamlit.app)
 :::
